<resources>
    <string name="app_name">MoneyManagement</string>
    <string name="totalMoney">₹10000</string>
    <string name="home">Home</string>
    <string name="userName">Kishan</string>
    <string name="title_activity_statment">StatmentActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_inEx">Add Income</string>
    <string name="year_Statement">Year</string>
    <string name="month_Statement">Month</string>
    <string name="day_Statement">Day</string>
    <string name="custom_Statement">Custom</string>
    <string name="food_category">Food</string>
    <string name="starbucks_coffee_category_note">Starbucks Coffee category</string>
    <string name="today">Today</string>
    <string name="time">08:00</string>
    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="week_statement">Week</string>
</resources>