<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.StatementActivity">


    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/statement_shape">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/year_Statement"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/month_Statement"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/day_Statement"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/statement_shape"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/custom_Statement"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/statement_shape"
        android:layout_gravity="end">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/all"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RcvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>